--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   font-family: "Orbitron";
   color: #fafafa;
   background-color: #1e1e1e;
+  text-align: center;
+  margin: 1rem;
 }
 
 header {
@@ -9,26 +11,51 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 4rem 1rem 1rem 1rem;
+  /* margin: 4rem 1rem 1rem 1rem; */
 }
 
 header #picture {
-  width: 15rem;
+  width: 13rem;
+  border-radius: 50%;
+  margin-top: 3rem;
 }
 
 header h1 {
-  margin: 2rem 1rem 0rem 1rem;
-}
-
-header h3 {
-  margin: 0.5rem 1rem 0rem 1rem;
-  font-size: 1.3rem;
+  /* margin: 2rem 1rem 0rem 1rem; */
+  margin: 2rem 0 1rem 0;
 }
 
 header #logo {
-  width: 10rem;
-  margin: 2rem;
+  width: 5rem;
+  margin: 1rem;
 }
+
+header h3 {
+  margin: 1rem 0 1rem 0;
+  font-size: 1.3rem;
+}
+
+@keyframes neonGlow {
+  0% { text-shadow: 0 0 1px #00a2ff, 0 0 5px #0084ff, 0 0 10px #0077ff, 0 0 15px #00f; }
+  50% { text-shadow: 0 0 5px #00a2ff, 0 0 10px #0084ff, 0 0 15px #0077ff, 0 0 20px #00f; }
+  100% { text-shadow: 0 0 1px #00a2ff, 0 0 5px #0084ff, 0 0 10px #0077ff, 0 0 15px #00f; }
+}
+
+header .slogan .neon{
+  font-weight: normal;
+  /* color: rgb(255, 255, 255); */
+  text-shadow: 0 0 5px #00a2ff, 0 0 10px #0084ff, 0 0 15px #0077ff, 0 0 20px #00f;
+  /* animation: neonGlow 1.5s infinite alternate; */
+}
+
+header .presentation p {
+  margin: .5rem 0 0 0;
+}
+
+header .presentation strong {
+  font-weight: normal;
+}
+
 
 main {
   display: flex;
@@ -39,31 +66,110 @@ main {
 
 .links {
   display: flex;
-  gap: 1rem;
+  flex-direction: column;
+  /* gap: 1rem; */
   justify-content: center;
   align-items: center;
-  margin: 1rem auto;
+  margin: 2.5rem 0 0 0;
 }
 
-.links img {
+.links-title{
+  margin-bottom: .5rem;
+  padding: 0;
+  font-weight: normal;
+}
+
+.links-icons {
+  display: flex;
+  gap: 1.5rem;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
+.links-icons img {
   width: 4rem;
+}
+
+.links-icons svg {
+  fill: #fafafa;
+  width: 3.8rem;
 }
 
 .contact {
   display: flex;
+  flex-direction: column;
+  /* gap: 1rem; */
+  justify-content: center;
+  align-items: center;
+  margin: 4rem 0 0 0;
+}
+
+.contact-icons {
+  display: flex;
   gap: 1rem;
   justify-content: center;
   align-items: center;
-  margin: 1rem auto;
+  margin: 1rem;
 }
 
-.contact img {
-  width: 5rem;
+.contact-icons img {
+  width: 5.2rem;
+}
+
+
+/*? test */
+#contact-link {
+  font-size: 24px;
+  text-decoration: none;
+  cursor: pointer;
+}
+/*? test */
+
+
+.studies {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  margin: 4rem 0 0 0;
+}
+
+.studies h3{
+  /* font-weight: normal; */
+  margin-bottom: .5rem;
+}
+
+.studies h4 {
+  font-weight: normal;
+  margin-bottom: .5rem;
+}
+
+.degree h4 {
+  margin: 0; 
+}
+
+.degree .equivalence {
+  font-size: .8rem;
+}
+
+.tools {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 4rem 0 0 0;
+}
+
+.tools-title{
+  font-weight: normal;
+  margin-bottom: .5rem;
 }
 
 ul {
   list-style-type: none;
-  padding: 1rem;
+  margin: 0rem 1rem 1rem 1rem;
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
@@ -76,6 +182,15 @@ li {
   align-items: center;
 }
 
-svg {
-  width: 3rem;
+.logo-js {
+  border-radius: 1.7px;
 }
+
+svg {
+  width: 2rem;
+}
+
+
+
+
+
